--- a/src/stylings/navbar.css
+++ b/src/stylings/navbar.css
@@ -41,13 +41,14 @@
     bottom: 0px;
     width: 100% !important;
     height: 75px;
-    background-color: white;
+    background-color: #1f2021;
     margin: 0px !important;
     display: none;
     align-items: center;
     justify-content: center;
     z-index: 1000;
-    border-top: 1px solid rgba(211, 211, 211, 0.5);
+    border-top: 1px solid rgba(211, 211, 211, 0.01);
+
     
 }
 @media only screen and (max-width: 767px) {
@@ -77,11 +78,12 @@
     justify-content: center;
     color: white;
     text-decoration: none;
-    font-size: 0.8rem;
+    font-size: 1rem;
 }
 #mobile-nav .nav-links a img{
     width: 20px;
     height: 20px;
+    filter: invert(1);
 }
 #mobile-nav .nav-links a:hover{
     background-color: rgba(211, 211, 211, 0.288);
