--- a/src/stylings/viewEvent.css
+++ b/src/stylings/viewEvent.css
@@ -90,6 +90,7 @@
     }
     .event-header-buttons .event-header-btn img{
       width: 60%;
+      
     }
     
     #join-button:hover{
@@ -122,6 +123,7 @@
     width: 20px;
     height: 20px;
     margin-right: 10px;
+    
   }
   
   
@@ -199,6 +201,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  background-color: #101112;
 }
 .view-event-outer-container{
   width: 80%;
@@ -220,6 +223,7 @@
 .view-event-image{
   width: 500px;
   height: 400px;
+  border-radius: 5px;
 }
 .event-header .header-top .event-date{
   width: 100%;
@@ -254,7 +258,7 @@
   cursor: pointer;
 }
 .tab-button{
-  width: 30%;
+  width: calc(100% / 3);
   height: 100%;
   display: flex;
   align-items: center;
@@ -298,6 +302,8 @@
   width: 90%;
   height: 75px;
   display: flex;
+  background-color: rgba(255, 255, 255, 0.062);
+  border-radius: 5px;
 }
 .organizer-profile-picture{
   height: 75px;
@@ -355,7 +361,7 @@
 .schedule-item p{
   padding: 0;
   margin: 0;
-  background-color: #f2b63e9a;
+  background-color: rgba(255, 255, 255, 0.062);
   color: white;
   width: 100%;
   box-sizing: border-box;
